--- a/app/src/main/res/layout/activity_update_customer.xml
+++ b/app/src/main/res/layout/activity_update_customer.xml
@@ -173,7 +173,7 @@
                 android:paddingBottom="5dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/consumption"
+                    android:id="@+id/priceUpdate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </com.google.android.material.textfield.TextInputLayout>
