add UpdateCustomer, update DatabaseHelper

--- a/app/src/main/res/layout/activity_increase_electric_price.xml
+++ b/app/src/main/res/layout/activity_increase_electric_price.xml
@@ -54,7 +54,7 @@
                 android:paddingRight="10dp">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/priceUpdate"
+                    android:id="@+id/consumptionUpdate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </com.google.android.material.textfield.TextInputLayout>
