--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -190,10 +190,12 @@
         android:id="@+id/imageSetting"
         android:layout_width="59dp"
         android:layout_height="55dp"
+        android:layout_marginStart="345dp"
         android:layout_marginTop="192dp"
         android:layout_marginEnd="10dp"
         android:alpha="0.5"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_settings_24" />
 
