--- a/app/src/main/res/layout-land/activity_customer_details.xml
+++ b/app/src/main/res/layout-land/activity_customer_details.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FAF4E1"
+    android:orientation="horizontal"
     tools:context=".CustomerDetails">
 
     <ImageButton
@@ -26,19 +27,17 @@
         android:fontFamily="@font/dm_serif_display"
         android:text="Customer Detail"
         android:textColor="#FF9900"
-        android:textSize="50sp"
+        android:textSize="40sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.551"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView7"
+        tools:layout_editor_absoluteX="45dp" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="127dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/customer" />
@@ -47,13 +46,11 @@
         android:id="@+id/linearLayout3"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:background="@drawable/rounded_background"
         android:elevation="4dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17">
+        tools:layout_editor_absoluteX="380dp"
+        tools:layout_editor_absoluteY="20dp">
 
         <LinearLayout
             android:id="@+id/idLayout"
@@ -232,27 +229,13 @@
     </LinearLayout>
 
     <ImageButton
-        android:id="@+id/lastPage"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="90dp"
-        android:background="@drawable/circle_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/nextPage"
-        app:srcCompat="@drawable/ic_last_page" />
-
-    <ImageButton
         android:id="@+id/previousPage"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/circle_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/nextPage"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/firstPage"
         app:srcCompat="@drawable/ic_back_2" />
 
@@ -260,11 +243,10 @@
         android:id="@+id/nextPage"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/circle_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/lastPage"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/previousPage"
         app:srcCompat="@drawable/ic_next" />
 
@@ -272,27 +254,37 @@
         android:id="@+id/firstPage"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="90dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/circle_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/previousPage"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/update"
         app:srcCompat="@drawable/ic_first_page" />
+
+    <ImageButton
+        android:id="@+id/lastPage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/circle_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nextPage"
+        app:srcCompat="@drawable/ic_last_page" />
 
     <Button
         android:id="@+id/update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="#FCCD7E"
-        android:text="Update Data"
+        android:text="Update"
         android:textColor="#000000"
         android:textSize="18dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+        tools:layout_editor_absoluteX="380dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
