--- a/app/src/main/res/layout-land/activity_customer_list.xml
+++ b/app/src/main/res/layout-land/activity_customer_list.xml
@@ -5,7 +5,8 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="#FAF4E1"
+    android:orientation="horizontal"
     tools:context=".Customer_RecyclerView.CustomerList">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -13,6 +14,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#FAF4E1"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20px"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
